--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 body{
     background-color: white;
+    margin: 0;
 }
-header{
+
+.mobile-bar{
+    display: none;
+}
+.mobile-cart{
+    display: none;
+}
+.pc-navbar{
     display: flex;
     justify-content: space-between;
 }
@@ -244,14 +252,15 @@ header{
     font-size: 16px;
     font-weight: 700;
     font-family: 'Poppins', sans-serif;
-    color: #E02C6D;
+    color: #ffffff;
+    background-color: #E02C6D;
     padding: 6px 20px;
     border: 1px solid #E02C6D;
     border-radius: 20px;
 }
 .featured-detail a:hover{
-    color: white;
-    background-color: #E02C6D;
+    color: #E02C6D;
+    background-color: #ffffff;
     transition: 0.5s;
 }
 
@@ -313,15 +322,10 @@ footer p{
  for small-mobile device
 ----------------------- */
 @media only screen and (max-width: 600px){
-    header{
-        display: none;
-    }
     
     
-   
-    /*------------------
-         removable
-    ----------------- */
+    
+  
 
 
     .top-banner{
@@ -397,31 +401,31 @@ footer p{
     .feature-product-sec{
         display: flex;
         flex-direction: column-reverse;
-       }
+    }
     .featured-detail{
         margin-left: 0;
         margin-right: 0;
         width: 100%;
         align-items: center;
-       }
+    }
     .featured-detail h1{
         font-size: 24px;
         margin-right: 0;
         text-align: center;
         
-       }
+    }
     .featured-detail p{
         text-align: center;
         margin-left: 18px;
         margin-right: 18px;
         margin-bottom: 50px;
         align-items: center;
-       }
+    }
     .featured-detail a{
         justify-content: center;
         margin-left: 105px;
         margin-right: 105px;
-       }
+    }
     .featured-image{
         display: flex;
         justify-content: center;
@@ -429,16 +433,53 @@ footer p{
         margin-top: 50px;
         width: 100%;
 
-       }
+    }
     .featured-image > img{
         
         
         width: 299px;
          
-       }
+    }
     footer h3{
         padding-top: 40px;
-       }
+    }
+    header{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        column-gap: 25px;
+        margin-top: 30px;
+    }
+    .nav-bar{
+        display: none;
+        
+    }
+    .mobile-bar{
+        display: flex;
+        font-size: 28px;
+        color: #18191F;
+        text-decoration: none;
+
+    }
+    .mobile-bar a{
+        color: #18191F;
+    }
+    .web-logo{
+        padding-left: 0;
+        padding-top: 0px;
+        font-size: 20px;
+    }
+    .pc-navbar{
+        justify-content: center;
+    }
+    .mobile-cart{
+        display: flex;
+        font-size: 25px;
+    }
+    .mobile-cart a{
+        color: #18191F;
+    }
+    
 }
 
     
